--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typography-theme-wordpress-2016": "^0.15.10"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.2"
